fixed planner prompts/contexts

--- a/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/profiles/general_agent.yaml
+++ b/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/profiles/general_agent.yaml
@@ -16,7 +16,7 @@ profile:
     THINK: "EnhancedThinkPlanner"
 
   executor_adapter_names:
-    SEARCH: "OpenAICustomSearcher"
+    SEARCH: "GeminiCustomSearcher"
     THINK: "BasicReasoningExecutor"
     WRITE: "BasicReportWriter"
 
