--- a/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/agents.yaml
+++ b/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/agents.yaml
@@ -30,6 +30,8 @@ agents:
     model:
       provider: "litellm"
       model_id: "openai/o3-2025-04-16" #"openrouter/anthropic/claude-sonnet-4"
+    agno_params:
+      reasoning: true
       # temperature: 0.7
     prompt_source: "prompts.planner_prompts.ENHANCED_SEARCH_PLANNER_SYSTEM_MESSAGE"
     response_model: "PlanOutput"
@@ -47,6 +49,8 @@ agents:
     model:
       provider: "litellm"
       model_id: "openai/o3-2025-04-16" #"openrouter/anthropic/claude-sonnet-4"
+    agno_params:
+      reasoning: true
       # temperature: 0.7
     prompt_source: "prompts.planner_prompts.ENHANCED_THINK_PLANNER_SYSTEM_MESSAGE"
     response_model: "PlanOutput"
@@ -64,6 +68,9 @@ agents:
     model:
       provider: "litellm"
       model_id: "openai/o3-2025-04-16" #"openrouter/anthropic/claude-sonnet-4"
+      # temperature: 0.7
+    agno_params:
+      reasoning: true
       # temperature: 0.7
     prompt_source: "prompts.planner_prompts.ENHANCED_WRITE_PLANNER_SYSTEM_MESSAGE"
     response_model: "PlanOutput"
@@ -98,6 +105,8 @@ agents:
     model:
       provider: "litellm"
       model_id: "openai/o3-2025-04-16" #"openrouter/anthropic/claude-sonnet-4"
+    agno_params:
+      reasoning: true
       # temperature: 0.7
     prompt_source: "prompts.planner_prompts.GENERAL_TASK_SOLVER_SYSTEM_MESSAGE"
     response_model: "PlanOutput"
@@ -133,6 +142,8 @@ agents:
     model:
       provider: "litellm"
       model_id: "openrouter/google/gemini-2.5-pro"
+    agno_params:
+      reasoning: true
     prompt_source: "prompts.executor_prompts.REASONING_EXECUTOR_SYSTEM_MESSAGE"
     registration:
       action_keys:
@@ -148,6 +159,8 @@ agents:
     model:
       provider: "litellm"
       model_id: "openrouter/google/gemini-2.5-pro"
+    agno_params:
+      reasoning: true
     prompt_source: "prompts.executor_prompts.BASIC_REPORT_WRITER_SYSTEM_MESSAGE"
     registration:
       action_keys:
@@ -212,6 +225,8 @@ agents:
     model:
       provider: "litellm"
       model_id: "openrouter/google/gemini-2.5-pro"
+    agno_params:
+      reasoning: true
     prompt_source: "prompts.aggregator_prompts.SEARCH_AGGREGATOR_SYSTEM_MESSAGE"
     registration:
       action_keys:
@@ -227,6 +242,8 @@ agents:
     model:
       provider: "litellm"
       model_id: "openrouter/google/gemini-2.5-pro"
+    agno_params:
+      reasoning: true
     prompt_source: "prompts.aggregator_prompts.THINK_AGGREGATOR_SYSTEM_MESSAGE"
     registration:
       action_keys:
@@ -269,6 +286,8 @@ agents:
     model:
       provider: "litellm"
       model_id: "openrouter/google/gemini-2.5-pro"
+    agno_params:
+      reasoning: true
     prompt_source: "prompts.aggregator_prompts.ROOT_ANALYSIS_AGGREGATOR_SYSTEM_MESSAGE"
     registration:
       named_keys: ["RootAnalysisAggregator", "root_analysis_aggregator"]
@@ -281,6 +300,8 @@ agents:
     model:
       provider: "litellm"
       model_id: "openrouter/google/gemini-2.5-pro"
+    agno_params:
+      reasoning: true
     prompt_source: "prompts.aggregator_prompts.ROOT_GENERAL_AGGREGATOR_SYSTEM_MESSAGE"
     registration:
       named_keys: ["RootGeneralAggregator", "root_general_aggregator"]
