made a lot of changes regarding final scores

--- a/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/profiles/general_agent.yaml
+++ b/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/profiles/general_agent.yaml
@@ -30,7 +30,7 @@ profile:
   aggregator_adapter_name: "default_aggregator"  # Fallback for backward compatibility
   plan_modifier_adapter_name: "PlanModifier"
 
-  default_planner_adapter_name: "CoreResearchPlanner"
+  default_planner_adapter_name: "GeneralTaskSolver"
   default_executor_adapter_name: "BasicReasoningExecutor"
   default_node_agent_name_prefix: "DataAnalysis"
 
