--- a/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/agents.yaml
+++ b/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/agents.yaml
@@ -30,9 +30,9 @@ agents:
     model:
       provider: "litellm"
       model_id: "openai/o3-2025-04-16" #"openrouter/anthropic/claude-sonnet-4"
+      temperature: 0.35
     agno_params:
       reasoning: true
-      # temperature: 0.7
     prompt_source: "prompts.planner_prompts.ENHANCED_SEARCH_PLANNER_SYSTEM_MESSAGE"
     response_model: "PlanOutput"
     registration:
@@ -49,6 +49,7 @@ agents:
     model:
       provider: "litellm"
       model_id: "openai/o3-2025-04-16" #"openrouter/anthropic/claude-sonnet-4"
+      temperature: 0.35
     agno_params:
       reasoning: true
       # temperature: 0.7
@@ -68,6 +69,7 @@ agents:
     model:
       provider: "litellm"
       model_id: "openai/o3-2025-04-16" #"openrouter/anthropic/claude-sonnet-4"
+      temperature: 0.35
       # temperature: 0.7
     agno_params:
       reasoning: true
@@ -88,6 +90,7 @@ agents:
     model:
       provider: "litellm"
       model_id: "openai/o3-2025-04-16" #"openrouter/anthropic/claude-sonnet-4"
+      temperature: 0.35
       # temperature: 0.7
     prompt_source: "prompts.planner_prompts.DEEP_RESEARCH_PLANNER_SYSTEM_MESSAGE"
     response_model: "PlanOutput"
@@ -105,6 +108,7 @@ agents:
     model:
       provider: "litellm"
       model_id: "openai/o3-2025-04-16" #"openrouter/anthropic/claude-sonnet-4"
+      temperature: 0.3
     agno_params:
       reasoning: true
       # temperature: 0.7
@@ -145,7 +149,11 @@ agents:
     agno_params:
       reasoning: true
     prompt_source: "prompts.executor_prompts.REASONING_EXECUTOR_SYSTEM_MESSAGE"
-    tools: ["PythonTools", "ReasoningTools"]
+    tools: 
+      - name: "PythonTools"
+        params:
+          save_and_run: false  # Disable automatic execution of Python code
+      - "ReasoningTools"
     registration:
       action_keys:
         - action_verb: "execute"
