--- a/sentient.yaml
+++ b/sentient.yaml
@@ -25,6 +25,19 @@ execution:
   hitl_timeout_seconds: 600.0  # 10 minutes for human review
   node_execution_timeout_seconds: 900.0  # 15 minutes max for overall task execution
   
+  # Enhanced timeout strategy with escalation
+  timeout_strategy:
+    # Warning threshold (warn about stuck nodes)
+    warning_threshold_seconds: 60.0   # 1 minute - catch hanging executors faster
+    # Soft timeout (attempt recovery)
+    soft_timeout_seconds: 180.0       # 3 minutes - faster recovery
+    # Hard timeout (force transitions)
+    hard_timeout_seconds: 300.0       # 5 minutes - more aggressive
+    # Maximum recovery attempts per node
+    max_recovery_attempts: 3
+    # Enable aggressive recovery for deadlock situations
+    enable_aggressive_recovery: true
+  
   # CHANGED: Default to root plan only - only review the initial high-level plan
   hitl_root_plan_only: true  # Set to true to only review root node's plan
   
