--- a/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/agents.yaml
+++ b/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/agents.yaml
@@ -21,7 +21,7 @@ agents:
         - action_verb: "plan"
           task_type: "WRITE"
       named_keys: ["CoreResearchPlanner", "default_planner"]
-    enabled: true
+    enabled: false
 
   - name: "EnhancedSearchPlanner"
     type: "planner"
@@ -138,7 +138,7 @@ agents:
     tools: ["DuckDuckGoTools", "WikipediaTools", "web_search"]
     registration:
       named_keys: ["SearchExecutor", "default_search_executor"]
-    enabled: true
+    enabled: false
 
   - name: "BasicReasoningExecutor"
     type: "executor"
@@ -229,7 +229,7 @@ agents:
         - action_verb: "execute"
           task_type: "SEARCH"
       named_keys: ["GeminiCustomSearcher", "default_gemini_searcher", "gemini_searcher"]
-    enabled: true
+    enabled: false
 
   - name: "ExaComprehensiveSearcher"
     type: "custom_search"
@@ -244,7 +244,7 @@ agents:
         - action_verb: "execute"
           task_type: "SEARCH"
       named_keys: ["ExaComprehensiveSearcher", "exa_searcher", "comprehensive_searcher"]
-    enabled: true
+    enabled: false
 
   # =============================================================================
   # AGGREGATOR AGENTS - Combine results from sub-tasks
