--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -1,14 +1,17 @@
 # Dockerfile for frontend development server
 
-FROM node:20-alpine
+FROM node:23.11.0-alpine
 
 WORKDIR /app
+
+# Install specific npm version to match native setup
+RUN npm install -g npm@10.9.2
 
 # Copy package files
 COPY frontend/package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm install
 
 # Copy frontend source
 COPY frontend/ ./
