--- a/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/agents.yaml
+++ b/src/sentientresearchagent/hierarchical_agent_framework/agent_configs/agents.yaml
@@ -411,6 +411,19 @@ agents:
         params:
           save_and_run: false
       - "ReasoningTools"
+    toolkits:
+      - name: "BinanceToolkit"
+        params:
+          default_market_type: "spot"
+          symbols: ['ICPUSD', 'POLUSD', 'LTCUSD', 'IOTAUSD', 'CRVUSDT', 'MKRUSDT', 'WBTCBTC', 'ASTRUSDT', 'OPUSDT', 'MASKUSDT', 'CHZUSDT', 'SHIBUSD', 'ARBUSDT', 'JTOUSDT', 'TUSDT', 'BTCUSD', 'RENDERUSD', 'ONGUSDT', 'PEPEUSD', 'FILUSDT', 'VTHOUSDT', 'XRPUSD', 'FORTUSDT', 'AIXBTUSDT', 'NEARUSDT', 'TRUMPUSDT', 'XRPUSDT', 'OPUSD', 'MEUSDT', 'POLUSDT', 'ORCAUSDT', 'BOSONUSDT', 'GUSDT', 'SOLBTC', 'ONEUSD', 'ADABTC', 'FLOWUSDT', 'OCEANUSDT', 'ENSUSD', 'SUIUSD', 'SUSDT', 'STMXUSDT', 'ETHUSD', 'ALPINEUSDT', 'BNBUSD', 'PEPEUSDT', 'AVAXUSD', 'CRVUSD', 'YFIUSDT', 'FLOKIUSD', 'CTSIUSDT', 'ENAUSDT', 'SUSHIUSDT', 'JAMUSDT', 'ICPUSDT', 'ALGOUSDT', 'GTCUSDT', 'XECUSDT', 'FLUXUSDT', '1INCHUSDT', 'NMRUSDT', 'CELRUSDT', 'KDAUSDT', 'XLMUSD', 'MEUSD', 'IOSTUSDT', 'ADAUSDT', 'BONKUSD', 'ACHUSDT', 'STORJUSDT', 'ZECUSDT', 'FILUSD', 'MANAUSD', 'ALGOUSD', 'DGBUSDT', 'PORTOUSDT', 'MANAUSDT', 'FLOKIUSDT', 'ONEUSDT', 'LINKUSD', 'JUPUSDT', 'OGNUSDT', 'EOSUSDT', 'WIFUSDT', 'ETHBTC', 'GALAUSDT', 'LDOUSDT', 'PONDUSDT', 'SUSD', 'LAYERUSDT', 'VIRTUALUSDT', 'APEUSDT', 'ICXUSDT', 'FETUSD', 'LTCUSDT', 'BANDUSDT', 'TLMUSDT', 'FETUSDT', 'DASHUSDT', 'LTOUSDT', 'CELOUSDT', 'EGLDUSDT', 'BCHUSD', 'TRUMPUSD', 'HBARUSDT', 'RLCUSDT', 'REEFUSDT', 'SANDUSD', 'PROMUSDT', 'SOLUSDC', 'TFUELUSDT', 'ETCUSD', 'GALAUSD', 'METISUSD', 'XNOUSDT', 'XTZUSDT', 'LRCUSDT', 'EIGENUSD', 'VETUSD', 'LPTUSD', 'NEOUSDT', 'BONKUSDT', 'RAREUSDT', 'DOGEUSDT', 'XLMUSDT', 'EIGENUSDT', 'LAZIOUSDT', 'AAVEUSD', 'HYPEUSDT', 'HBARUSD', 'ZENUSDT', 'POLYXUSDT', 'SUIUSDT', 'KNCUSDT', 'BNBBTC', 'SHIBUSDT', 'COTIUSDT', 'SANDUSDT', 'AUDIOUSDT', 'SOLUSDT', 'ONTUSDT', 'QTUMUSDT', 'RVNUSD', 'VOXELUSDT', 'ENSUSDT', 'UNIUSDT', 'DAIUSDT', 'SNXUSDT', 'KDAUSD', 'BATUSDT', 'GLMUSDT', 'ZILUSD', 'ENJUSDT', 'COMPUSDT', 'BTCUSDC', 'SYSUSDT', 'ALICEUSDT', 'SKLUSDT', 'TURBOUSDT', 'BCHUSDT', 'ORBSUSDT', 'SUSHIUSD', 'BTRSTUSDT', 'FARTCOINUSDT', 'BLURUSDT', 'IMXUSDT', 'ZILUSDT', 'DATAUSDT', 'AVAXUSDT', 'SANTOSUSDT', 'DOTUSDT', 'MAGICUSDT', 'DUSDT', 'BNBUSDT', 'GRTUSD', 'SOLUSD', 'OXTUSDT', 'PNUTUSDT', 'KAVAUSDT', 'BICOUSDT', 'ETHUSDT', 'LPTUSDT', 'FORTHUSDT', 'LOOMUSDT', 'APTUSDT', 'TRACUSDT', 'QNTUSDT', 'ADAUSD', 'ILVUSDT', 'RVNUSDT', 'HYPEUSD', 'SPXUSDT', 'ADXUSDT', 'ETCUSDT', 'ZRXUSDT', 'LOKAUSDT', 'LINKUSDT', 'ATOMUSD', 'AXLUSDT', 'ROSEUSDT', 'CLVUSDT', 'PAXGUSDT', 'VETUSDT', 'BNTUSDT', 'IOTAUSDT', 'ATOMUSDT', 'USDTUSD', 'DGBUSD', 'RENDERUSDT', 'AXSUSDT', 'DOTUSD', 'REQUSDT', 'USDCUSDT', 'METISUSDT', 'DOGEUSD', 'API3USDT', 'APTUSD', 'KAITOUSDT', 'THETAUSD', 'WAXPUSDT', 'LSKUSDT', 'AAVEUSDT', 'GRTUSDT', 'THETAUSDT', 'NEIROUSDT', 'KSMUSDT', 'SLPUSDT', 'STGUSDT', 'DIAUSDT', 'UNIUSD', 'IOTXUSDT', 'JUPUSD', 'ANKRUSDT', 'NEARUSD', 'ADAUSDC', 'ETHUSDC', 'PENGUUSDT', 'BALUSDT', 'VTHOUSD', 'USDCUSD', 'RADUSDT', 'BTCUSDT']
+          data_dir: "./data/binance"
+          parquet_threshold: 500
+        available_tools:
+          - "get_current_price"
+          - "get_klines"
+          - "get_order_book"
+          - "get_symbol_ticker_change"
+          - "get_book_ticker"
     registration:
       action_keys:
         - action_verb: "execute"
